--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-1.) Get barebones syncing of text running via Peer.js and IndexedDB.
-2.) Get support for different filetypes.
-3.) Implement e2e encryption.
-4.) Give a sexy-ass material design UI.
+> Get barebones syncing of text running via Peer.js and IndexedDB.
+> Get support for different filetypes.
+> Give a sexy-ass material design UI.
+> Add feature to interact with user microphone or camera to send 
+    audio/video messages
